# learn-wgpu-yew

./: Cargo.toml  README.md  index.html
src/: main.rs  rander.rs  resources.rs  wgpu_state.rs
src/rander/: camera.rs  instance.rs  light.rs  model.rs  shader.rs  texture.rs  vertex.rs
src/shader/: shader.wgsl
static/shader/: shader.wgsl
