[package]
name = "learn-wgpu-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "wasm32-unknown-unknown"

[dependencies]
gloo = "0.8.0"
once_cell = "1.14.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
] }
wgpu = { version = "0.13.1", features = ["webgl"] }
yew = "0.19.3"
yew-canvas = "0.2.1"
